# milesight-chirpstack

./: .gitignore  CHIRPSTACK_CONFIG.md  CLI_USAGE.md  Caddyfile  README.md  README_WEB.md  chirpstack_cli.py  chirpstack_configurator.py  config.example.json  config.json  configure_chirpstack.py  demo.py  device_profiles.json  devices.json  docker-compose.yml  gateways.json  iot_client.py  main.py  pyproject.toml  run_web_server.py  sync_with_tandem.py  ws502_codec.js
app/: __init__.py  auth.py  database.py  main.py  models.py  mqtt_client.py
app/static/css/: styles.css
app/static/js/: auth.js  dashboard.js
app/templates/: base.html  dashboard.html  login.html  register.html
configuration/chirpstack/: chirpstack.toml
configuration/mosquitto/config/: mosquitto.conf
